--- a/src/static/index.html
+++ b/src/static/index.html
@@ -3,7 +3,12 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>spritesheet editor</title>
-		<link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css" />
+		<link
+			href="https://fonts.googleapis.com/css?family=Roboto"
+			rel="stylesheet"
+			type="text/css"
+			crossorigin="anonymous"
+		/>
 		<script type="module" src="./bundle.js"></script>
 	</head>
 	<style>
